--- a/gb/20/9/27/n12434558.md
+++ b/gb/20/9/27/n12434558.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/iqqfyj3004/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/iqqfyj3004/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/iqqfyj3004/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/iqqfyj3004/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/iqqfyj3004/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/iqqfyj3004/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/iqqfyj3004/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/iqqfyj3004/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/iqqfyj3004/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/iqqfyj3004/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/iqqfyj3004/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/iqqfyj3004/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/iqqfyj3004/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>真相破迷 “等着退党”的中国民众</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/09/C3.jpg" />
 <h6>2020年3月1日，全球退出中共服务中心在纽约布碌崙八大道游行，打出“退党”巨幅横幅。（林丹／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2020年09月28日讯】（大纪元记者王奕然采访报导）“有的人一说就退，感觉对方就在等着你一样。” 美国佛州<ahref="https://github.com/iqqfyj3004/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员、向大陆打真相电话的<ahref="https://github.com/iqqfyj3004/djy/blob/master/gb/tag/%E9%80%80%E5%85%9A.md#1">退党</a>义工李城芳说，“很多人说谢谢你，反复表达感谢。”</p>
-<p>欧洲<ahref="https://github.com/iqqfyj3004/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员、<ahref="https://github.com/iqqfyj3004/djy/blob/master/gb/tag/%E9%80%80%E5%85%9A.md#1">退党</a>义工高女士说，近日，大陆广东一位男士不仅自己退了党，还介绍其他人来听真相和退党。这位男士还对她说，“大家一起来反党。”</p>
+	<p>【大纪元2020年09月28日讯】（大纪元记者王奕然采访报导）“有的人一说就退，感觉对方就在等着你一样。” 美国佛州<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员、向大陆打真相电话的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%80%80%E5%85%9A.md#1">退党</a>义工李城芳说，“很多人说谢谢你，反复表达感谢。”</p>
+<p>欧洲<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员、<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%80%80%E5%85%9A.md#1">退党</a>义工高女士说，近日，大陆广东一位男士不仅自己退了党，还介绍其他人来听真相和退党。这位男士还对她说，“大家一起来反党。”</p>
 <p>9月26日，6万多人在大纪元退党网站上声明退党、退团、退队（简称“三退”）；9月25日，5万多人三退。至9月27日，总计超过3.64亿中国人声明退出中共。</p>
-<p>2004年11月，大纪元发表系列社论《<ahref="https://github.com/iqqfyj3004/djy/blob/master/gb/tag/%E4%B9%9D%E8%AF%84.md#1">九评</a>共产党》，全面系统地剖析中共不光彩的起家历史、谎言欺骗与暴政杀戮的邪恶本性，揭露了中共给中华民族和全人类带来的深重灾难及必招天谴的宿命，从而引发退党大潮。</p>
+<p>2004年11月，大纪元发表系列社论《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%9D%E8%AF%84.md#1">九评</a>共产党》，全面系统地剖析中共不光彩的起家历史、谎言欺骗与暴政杀戮的邪恶本性，揭露了中共给中华民族和全人类带来的深重灾难及必招天谴的宿命，从而引发退党大潮。</p>
 <h2>听真相的人更多 三退比例更高 “感觉对方就在等着你（帮他退党）一样”</h2>
-<p>马来西亚的法轮功学员、<ahref="https://github.com/iqqfyj3004/djy/blob/master/gb/tag/%E9%80%80%E5%85%9A%E4%B9%89%E5%B7%A5.md#1">退党义工</a>夏女士9月20日受访表示，感觉现在愿意了解真相的人更多了，退的比例也更高，9月19日她打真相电话碰到的一个党委书记，对方听了一会就挂，她又打， 他又接起电话听。她说，“现在愿意了解真相的比较多，他就静静地听。”</p>
+<p>马来西亚的法轮功学员、<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%80%80%E5%85%9A%E4%B9%89%E5%B7%A5.md#1">退党义工</a>夏女士9月20日受访表示，感觉现在愿意了解真相的人更多了，退的比例也更高，9月19日她打真相电话碰到的一个党委书记，对方听了一会就挂，她又打， 他又接起电话听。她说，“现在愿意了解真相的比较多，他就静静地听。”</p>
 <p>夏女士还表示，一位北京老先生近日主动要求退党和办理退党证书。她说，这位老先生可能之前就明白了法轮功和中共的真相，但是没认真对待退党的严肃性。现在国际局势和天象变化很快，这位老先生接到她打来的电话后，着急的表达要赶紧退党，否则担心不能来美探亲。</p>
-<p>欧洲法轮功学员、<ahref="https://github.com/iqqfyj3004/djy/blob/master/gb/tag/%E9%80%80%E5%85%9A%E4%B9%89%E5%B7%A5.md#1">退党义工</a>李女士受访表示，她也感觉现在用心听真相的人比原来更多了。9月24日，她打真相电话。有6个退出党、团队、的。她介绍，如果每天打三十个左右的电话，多则十几个人退，少则有三四个人退的。</p>
+<p>欧洲法轮功学员、<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%80%80%E5%85%9A%E4%B9%89%E5%B7%A5.md#1">退党义工</a>李女士受访表示，她也感觉现在用心听真相的人比原来更多了。9月24日，她打真相电话。有6个退出党、团队、的。她介绍，如果每天打三十个左右的电话，多则十几个人退，少则有三四个人退的。</p>
 <p>美国佛州法轮功学员、退党义工李城芳表示，每天打真相电话的情况有所不同，比如有的人三五分钟就退了，也有的人可能需要讲较长时间，9月21日的一通电话，她在电话中就讲了38分钟后，对方退了团；也有的人是静静地听，最后再退；或者有的人已经明白真相了，一说就退，“感觉对方就在等着你一样”；有时一天打电话3小时，十几个人三退。</p>
 <p>欧洲法轮功学员、退党义工高女士9月25日受访表示，7月15日，广东一位30岁左右的男士在听了7分钟的电话真相后，以“明辉”化名退党，之后，这位男士还主动不断向她介绍自己的朋友来听法轮功学员讲真相和退党。“明辉”跟她说：“大家一起来反党。”</p>
 <p>高女士说，“有的人接到电话真是非常非常高兴。” 一位小青年接到高女士的退党真相电话后说，“我知道共产党不好，但没想到他们这么不好。”</p>
@@ -28,12 +28,12 @@
 <p>中国民众的退党大潮，也得到国际社会的支持。</p>
 <h2>美国宾州众议院颁奖 声援3.6亿中国人退出中共</h2>
 <p>2020年8月30日，大费城地区法轮功学员在费城中国城举办声援3.6亿中国人退出中共党、团、队的活动。美国宾州州众议员玛丽?艾萨克森（Mary Isaacson）在活动前颁发褒奖令给大费城法轮大法学会，以声援这次退党集会。</p>
-<p>宾夕法尼亚州州众议院褒奖令中说：“‘退党’运动始于大纪元报社的系列社论《<ahref="https://github.com/iqqfyj3004/djy/blob/master/gb/tag/%E4%B9%9D%E8%AF%84.md#1">九评</a>共产党》。2004年11月《九评共产党》发表后，迄今已有超过3.6亿中国人勇敢地站出来对共产党、共青团、少先队说‘不’。中国的‘退党’运动已成为世界上最大的草根运动。”</p>
+<p>宾夕法尼亚州州众议院褒奖令中说：“‘退党’运动始于大纪元报社的系列社论《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%9D%E8%AF%84.md#1">九评</a>共产党》。2004年11月《九评共产党》发表后，迄今已有超过3.6亿中国人勇敢地站出来对共产党、共青团、少先队说‘不’。中国的‘退党’运动已成为世界上最大的草根运动。”</p>
 <p>“中共在过去的七十多年间通过各种政治运动造成超过8千万中国人非正常死亡。这些运动包括土改运动、大跃进、文化大革命、天安门大屠杀、迫害法轮功、对新疆维族人和香港民主运动的镇压等。”</p>
 <p>“法轮功学员，作为被中共迫害的最大群体，21年来被非法监禁和酷刑折磨。很多学员因中共政府操纵的活摘器官而丧失生命。”</p>
 <p>“中共除了迫害中国自己的人民，还通过网络黑客、知识产权偷窃等手段从西方发达国家盗取资源，并且利用债务陷阱奴役发展中国家。中共还向世界范围内的大学、媒体、政府机构、国际组织（如联合国）等渗透。”</p>
 <p>“宾夕法尼亚州州众议院宣布，全力支持和表彰大费城法轮大法学会组织的庆祝超过3.6亿中国人退出中共及其附属组织的退党集会。”褒奖令说。#</p>
-<p>责任编辑：高静</p>
+<p>责任编辑：高静◇</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
@@ -47,42 +47,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/16/9/28/n8346816.md#1">中共政法委系统官员在巴黎退党</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/16/9/30/n8351453.md#1">袁斌：一名大陆警察的退党心路</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/7/23/n12278808.md#1">美拟驱逐中共党员出境 专家：退党记录很重要</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/8/19/n12342919.md#1">大陆山东国保警察退党记</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/9/28/n8346816.md#1">中共政法委系统官员在巴黎退党</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/9/30/n8351453.md#1">袁斌：一名大陆警察的退党心路</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/7/23/n12278808.md#1">美拟驱逐中共党员出境 专家：退党记录很重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/8/19/n12342919.md#1">大陆山东国保警察退党记</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/19/n9864134.md#1" target="_blank">毛泽东诗词宣扬暴力 为文革武斗输注能量</a></li><li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/3/10/n11929991.md#1" target="_blank">斯洛伐克各界人士谴责中共迫害法轮功</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/9/n10899776.md#1" target="_blank">林辉：姚依林回忆“一二九运动”证实三件事</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/7/n10284211.md#1" target="_blank">中国良心教师们的故事（2）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/25/n12429747.md#1">美退役少校：外星人1978年入侵基地遭射杀</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/18/n12412674.md#1">上善若水，水善利万物而不争</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/8/n12388919.md#1">灵魂在阴间受刑？古籍记载人身病痛另有缘由</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/23/n12423944.md#1">女子濒死在隧道中高速飞行 还与耶稣对话</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/21/n12419416.md#1">印男花30年独力开凿3公里长河渠 引水入村</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/27/n12433623.md#1">【老外看中国】美议员克鲁兹：台湾是自由灯塔</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/26/n12431476.md#1">【十字路口】恒大债务捆绑中共 引爆金融风暴？</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/26/n12433220.md#1">【新闻看点】疫情严峻 WHO：死亡或超二百万</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/25/n12430764.md#1">红二代与习近平决裂 对习杀伤力非常大</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/25/n12429962.md#1">中共病毒突变 戴口罩洗手恐怕都不管用</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/24/n12428212.md#1">【新闻看点】遭美重击北京狂扰台海 美军重返台？</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/25/n12429560.md#1">黄鸿升今火化 峮峮痛哭 杨丞琳送最后一程</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/25/n12430391.md#1">黄鸿升花葬阳明山 宪哥曝遗容“很帅像睡觉”</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/25/n12430801.md#1">黄鸿升长眠阳明山 生前IG转为纪念账号</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/24/n12428559.md#1">周润发行山邂逅网友 听到公益计划立马掏腰包</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/24/n12428038.md#1">朱孝天宠妻如宠女 因遗传病没打算生小孩</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/24/n12427711.md#1">驼背是肺的大敌！3招练胸背肌 改善驼背又强肺</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/26/n12431601.md#1">车评：完美的油电混合 2020 Lexus RX450h F Sport</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/25/n12429747.md#1">美退役少校：外星人1978年入侵基地遭射杀</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/23/n12425078.md#1">6类人易得退化性关节炎 医师：做对运动护膝盖</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/25/n12430512.md#1">日本前首相医师：这样站立2分钟 等于走路1小时</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/iqqfyj3004/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/iqqfyj3004/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/27/n12434558.htm">真相破迷 “等着退党”的中国民众</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/27/n12434558.htm">真相破迷 “等着退党”的中国民众</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/27/n12434558.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/iqqfyj3004/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/iqqfyj3004/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/9/27/n12434558.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
